# execution-completion

./: .gitignore  LICENSE  README.md  pyproject.toml
src/runa/: __init__.py  context.py  entity.py  execution.py
tests/: test_execution.py
tests/execution/: test_entity_create_entity.py  test_private_state.py
